Adicionando nomeEndereco e limite de enderecos por cliente
